[tool.poetry]
name = "ws-loader"
version = "0.1.0"
description = "Load shellcode over a websocket."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
argparse = "^1.4.0"
aiofiles = "^24.1.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
